# nuttx-env

./: .gitignore  README.md  changelog.md  pyproject.toml
.github/workflows/: python-publish.yml
src/nuttx_env/: __init__.py  cli.py  github.py  handlers.py  kconfig.py  utils.py  vars.py
