[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nuttx-env"
dynamic = ["version"]
description = "A Python library for creating and managing project environments for RTOS NuttX"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alexey Matveev", email = "tippet@yandex.ru"},
]
keywords = ["nuttx", "rtos", "embedded", "development", "environment"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests",
    "platformdirs",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/shizacat/nuttx-env"
Documentation = "https://github.com/shizacat/nuttx-env#readme"
Repository = "https://github.com/shizacat/nuttx-env"
Issues = "https://github.com/shizacat/nuttx-env/issues"

[project.scripts]
nuttx-env = "nuttx_env.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "*test*", "tmp"]

[tool.hatch.build]
exclude = [
    "/tmp",
    "/tmp/**",
    "/uv.lock"
]

[tool.hatch.version]
path = "src/nuttx_env/__init__.py"
